Update ChatInput to send user input messages and clear input field

--- a/03-state-event-handlers.html
+++ b/03-state-event-handlers.html
@@ -25,11 +25,13 @@
                 setChatMessages([
                     ...chatMessages,
                     {
-                        message: 'Test',
+                        message: inputText,
                         sender: 'user',
                         id: crypto.randomUUID()
                     }
                 ]);
+
+                setInputText('');
             }
 
             return (
@@ -38,6 +40,7 @@
                         placeholder="Send a message to Chatbot"
                         size="40"
                         onChange={saveInputText}
+                        value={inputText}
                     />
                     <button onClick={sendMessage}>Send</button>
                 </>
