--- a/03-state-event-handlers.html
+++ b/03-state-event-handlers.html
@@ -11,6 +11,8 @@
     <script src="https://unpkg.com/supersimpledev/react.js"></script>
     <script src="https://unpkg.com/supersimpledev/react-dom.js"></script>
 
+    <script src="https://unpkg.com/supersimpledev/chatbot.js"></script>
+
     <script src="https://unpkg.com/supersimpledev/babel.js"></script>
     <script type="text/babel">
         function ChatInput({ chatMessages, setChatMessages }) {
@@ -22,11 +24,25 @@
 
 
             function sendMessage() {
-                setChatMessages([
+                const newChatMessages = [
                     ...chatMessages,
                     {
                         message: inputText,
                         sender: 'user',
+                        id: crypto.randomUUID()
+                    }
+                ]
+
+                setChatMessages(newChatMessages);
+
+                const response = Chatbot.getResponse(inputText);
+                console.log(response)
+
+                setChatMessages([
+                    ...newChatMessages,
+                    {
+                        message: response,
+                        sender: 'bot',
                         id: crypto.randomUUID()
                     }
                 ]);
