Added reset functionality

--- a/Exercises/03-state-event-handlers/3-a-f.html
+++ b/Exercises/03-state-event-handlers/3-a-f.html
@@ -28,6 +28,14 @@
             )
         }
 
+        function Reset({ count, setCount }) {
+            return (
+                <>
+                    <button onClick={() => setCount(0)}>Reset</button>
+                </>
+            )
+        }
+
         function App() {
             const [count, setCount] = React.useState(0);
 
@@ -35,6 +43,7 @@
                 <>
                     <Counter count={count} setCount={setCount}></Counter>
                     <Counter count={count} setCount={setCount}></Counter>
+                    <Reset count={count} setCount={setCount}></Reset>
                 </>
             )
         }
